remove unnecessary value attributes

--- a/project0/advanced-search.html
+++ b/project0/advanced-search.html
@@ -21,7 +21,7 @@
         <label for="none">none of these words:</label>
         <input type="text" id="none" name="as_eq" />
         <div>
-          <button type="submit" value="Google Search">Google Search</button>
+          <button type="submit">Google Search</button>
         </div>
       </form>
     </div>
