--- a/project0/image-search.html
+++ b/project0/image-search.html
@@ -11,7 +11,7 @@
     <form class="search" action="https://www.google.com/search">
       <input type="text" name="q" placeholder="Search for images..." />
       <input type="hidden" name="tbm" value="isch" />
-      <button type="submit" value="Google Search">Google Search</button>
+      <button type="submit">Google Search</button>
     </form>
   </body>
 </html>
