--- a/project0/index.html
+++ b/project0/index.html
@@ -12,7 +12,7 @@
     <form class="search" action="https://www.google.com/search">
       <input type="text" name="q" placeholder="Search for something..." />
       <div>
-        <button type="submit" value="Google Search">Google Search</button>
+        <button type="submit">Google Search</button>
         <button type="submit" name="btnI" value="I'm feeling lucky">
           I'm feeling lucky
         </button>
